mds: progress the recover queue immediately after the inode is enqueued

Fixes: https://tracker.ceph.com/issues/50840
Signed-off-by: "Yan, Zheng" <ukernel@gmail.com>
(cherry picked from commit 616ebc3f04620c22439a62f3af35845fa98e508f)